test/1.2/errors/T_ECYCLICTRAIT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// WARNING WEXPERIMENTAL
trait t {
    /// ERROR ECYCLICTEMPLATE
    is u;
}

/// WARNING WEXPERIMENTAL
trait u {
    /// ERROR ECYCLICTEMPLATE
    is v;
}

/// WARNING WEXPERIMENTAL
trait v {
    /// ERROR ECYCLICTEMPLATE
    is w;
}

/// WARNING WEXPERIMENTAL
trait w {
    /// ERROR ECYCLICTEMPLATE
    is t;
}
